@@ -1,5 +1,10 @@
 2008-10-11  Paul Thomas  <pault@gcc.gnu.org>
 
+	PR fortran/37794
+	* gfortran.dg/used_types_24.f90: New test.
+
+2008-10-11  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/35680
 	* gfortran.dg/transfer_array_intrinsic_5.f90: New test.
 
